2009-06-17	The InnoDB Team

	* row/row0merge.c:
	Fix Bug#45426 UNIV_DEBUG build cause assertion error at CREATE INDEX

2009-06-17	The InnoDB Team

	* mysql-test/innodb_bug45357.result, mysql-test/innodb_bug45357.test,
	row/row0mysql.c:
	Fix Bug#45357 5.1.35 crashes with Failing assertion: index->type &
	DICT_CLUSTERED

2009-06-17	The InnoDB Team

	* handler/ha_innodb.cc, mysql-test/innodb-autoinc.result,
	mysql-test/innodb-autoinc.test:
	Fix Bug#44030 Error: (1500) Couldn't read the MAX(ID) autoinc value
	from the index (PRIMARY)

2009-06-11	The InnoDB Team

	* handler/ha_innodb.cc, mysql-test/innodb.result, srv/srv0srv.c:
	Change the following defaults:
	max_dirty_pages_pct: from 90 to 75, max allowed from 100 to 99
	additional_mem_pool_size: from 1 to 8 MB
	buffer_pool_size: from 8 to 128 MB
	log_buffer_size: from 1 to 8 MB
	read_io_threads/write_io_threads: from 1 to 4

2009-06-09	The InnoDB Team

	* handler/ha_innodb.cc, include/trx0trx.h, trx/trx0trx.c:
	Enable Group Commit functionality that was broken in 5.0 when
	distributed transactions were introduced.

2009-06-05	The InnoDB Team

	* handler/ha_innodb.cc, include/os0file.h, include/srv0srv.h,
	os/os0file.c, srv/srv0srv.c, srv/srv0start.c:
	Enable functionality to have multiple background IO helper threads.
	Expose new configure knobs innodb_read_io_threads and
	innodb_write_io_threads and deprecate innodb_file_io_threads (this
	parameter was relevant only on windows). Internally this allows
	multiple segments for read and write IO request arrays where one
	thread works on one segement.

2009-06-05	The InnoDB Team

	* buf/buf0lru.c, buf/buf0rea.c, handler/ha_innodb.cc,
	include/srv0srv.h, srv/srv0srv.c:
	Fix a bug in linear read ahead:
	  1) Take into account access pattern when deciding whether or not to
	    do linear read ahead.
	  2) Expose a knob innodb_read_ahead_factor = [0-64] default (8),
	    dynamic, global to control linear read ahead behvior. This is the